fixed the alignment on the main section of the about page

--- a/about.css
+++ b/about.css
@@ -5,10 +5,16 @@
     --transparent: rgba(0, 0, 0, 0.062);
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 main {
     align-items: center;
     width: 350px;
     margin-top: 2rem;
+    align-self: center;
 }
 
 main > div {
@@ -32,7 +38,8 @@ main > div div {
     background-image: url(images/blogger.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    align-self: center;
+    border-radius: 1rem;
+    border: solid 2px var(--themeText);
 }
 
 footer {
